@@ -1,3 +1,6 @@
+* 12-Sep-2011: version 0.2.5:
+    - Added function getNumAffectedRows($conn) to class SqlStatement
+
 * 18-Jun-2011: version 0.2.4:
     - Added classes ParamAsIs
 
